--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Git Demo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #74ebd5, #ACB6E5);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333;
+            text-align: center;
+        }
+        h1 {
+            color: #fff;
+            text-shadow: 2px 2px 4px #000;
+        }
+        p {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px 20px;
+            border-radius: 8px;
+        }
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 6px;
+            background-color: #ff7f50;
+            color: white;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #ff6347;
+        }
+    </style>
 </head>
 <body>
     <h1>Проект для демонстрации Git</h1>
     <p>GitHub репозиторий работает!</p>
+    <button onclick="sayHello()">Скажи Привет!</button>
+
+    <script>
+        function sayHello() {
+            alert("Привет, GitHub Pages работает!");
+        }
+    </script>
 </body>
 </html>
+
