--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Git Demo</title>
+    <title>Git Demo + Игра</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,7 +26,7 @@
             border-radius: 8px;
         }
         button {
-            margin-top: 20px;
+            margin-top: 10px;
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
@@ -39,18 +39,45 @@
         button:hover {
             background-color: #ff6347;
         }
+        #clicker-score {
+            font-size: 20px;
+            margin-top: 15px;
+            color: #fff;
+            text-shadow: 1px 1px 2px #000;
+        }
     </style>
 </head>
 <body>
     <h1>Проект для демонстрации Git</h1>
     <p>GitHub репозиторий работает!</p>
+
+    <!-- Мини-игра: кликер -->
+    <button id="clicker-btn">Нажми меня!</button>
+    <div id="clicker-score">Счёт: 0</div>
+
     <button onclick="sayHello()">Скажи Привет!</button>
 
     <script>
+        // Функция приветствия
         function sayHello() {
             alert("Привет, GitHub Pages работает!");
         }
+
+        // Мини-игра: кликер
+        let score = 0;
+        const button = document.getElementById("clicker-btn");
+        const scoreDisplay = document.getElementById("clicker-score");
+
+        button.addEventListener("click", () => {
+            score++;
+            scoreDisplay.textContent = "Счёт: " + score;
+
+            // Эффект анимации при клике
+            button.style.transform = "scale(1.2)";
+            setTimeout(() => button.style.transform = "scale(1)", 100);
+        });
     </script>
 </body>
 </html>
+
 
